all collections created and database intergaration, error handling and validation functinal
